Add Loot lists for generating loot